--- a/app/src/main/res/layout/call_view_outgoing_screen.xml
+++ b/app/src/main/res/layout/call_view_outgoing_screen.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout_background_outgoing_screen"
     android:layout_width="match_parent"
+    android:background="@color/colorPrimary"
     android:layout_height="wrap_content"
     >
 
@@ -14,5 +15,6 @@
         android:gravity="center_horizontal"
         android:text="@string/calling"
         android:textSize="20sp"
-        android:textStyle="normal" />
+        android:textColor="@color/white"
+        android:textStyle="bold" />
 </RelativeLayout>
